<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/holo_orange_light"
    android:padding="20dp"
    android:gravity="center">

    <TextView
        android:text="@string/computer_wins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/winner_textview"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    <Button
        android:text="@string/play_again"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/playAgain"
        android:layout_marginTop="30dp"/>

    <Button
        android:text="@string/main_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/endGame"
        android:layout_marginTop="30dp"/>

</LinearLayout>