<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.nataliengan.tictactoe.MainActivity">

    <Button
        android:text="@string/quit_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/exit"
        android:layout_marginTop="13dp"
        android:background="@android:color/holo_red_light"
        android:layout_below="@+id/aiGame"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/title"
        android:id="@+id/imageView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" />

    <Button
        android:text="@string/two_player"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/humanGame"
        android:background="@android:color/holo_green_light"
        android:layout_alignBottom="@+id/imageView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/play_against_computer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/aiGame"
        android:layout_marginTop="13dp"
        android:background="@android:color/holo_orange_light"
        android:layout_below="@+id/imageView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
