<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_ai"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.nataliengan.tictactoe.AIActivity">

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_alignLeft="@+id/linearLayout"
        android:layout_alignStart="@+id/linearLayout"
        android:id="@+id/linearLayout2">
        <Button
            android:layout_height="100dp"
            android:layout_width="100dp"
            android:textSize="48dp"
            android:id="@+id/b1"
            android:background="@android:color/darker_gray"/>

        <Button
            android:layout_marginLeft="10dp"
            android:layout_height="100dp"
            android:layout_width="100dp"
            android:textSize="48dp"
            android:id="@+id/b2"
            android:background="@android:color/darker_gray"/>

        <Button
            android:layout_marginLeft="10dp"
            android:layout_height="100dp"
            android:layout_width="100dp"
            android:textSize="48dp"
            android:id="@+id/b3"
            android:background="@android:color/darker_gray"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/linearLayout2"
        android:layout_alignLeft="@+id/linearLayout2"
        android:layout_alignStart="@+id/linearLayout2">
        <Button
            android:layout_height="100dp"
            android:layout_width="100dp"
            android:textSize="48dp"
            android:id="@+id/c1"
            android:background="@android:color/darker_gray"/>
        <Button
            android:layout_marginLeft="10dp"
            android:layout_height="100dp"
            android:layout_width="100dp"
            android:textSize="48dp"
            android:id="@+id/c2"
            android:background="@android:color/darker_gray"/>
        <Button
            android:layout_marginLeft="10dp"
            android:layout_height="100dp"
            android:layout_width="100dp"
            android:textSize="48dp"
            android:id="@+id/c3"
            android:background="@android:color/darker_gray"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        android:id="@+id/linearLayout"
        android:layout_below="@+id/linearLayout3"
        android:layout_centerHorizontal="true">

        <Button
            android:layout_height="100dp"
            android:layout_width="100dp"
            android:textSize="48dp"
            android:id="@+id/a1"
            android:background="#9D9D9D" />

        <Button
            android:layout_marginLeft="10dp"
            android:layout_height="100dp"
            android:layout_width="100dp"
            android:textSize="48dp"
            android:id="@+id/a2"
            android:background="@android:color/darker_gray"/>

        <Button
            android:layout_marginLeft="10dp"
            android:layout_height="100dp"
            android:layout_width="100dp"
            android:textSize="48dp"
            android:id="@+id/a3"
            android:background="@android:color/darker_gray"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="83dp"
        android:id="@+id/linearLayout3"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <TextView
            android:text="@string/player_x_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/playerX"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:text="0"
            android:paddingLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/playerXScore"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:text="@string/computer_label"
            android:paddingLeft="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/playerO"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:text="@string/starting_score"
            android:paddingLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/playerOScore"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
    </LinearLayout>


</RelativeLayout>
